Fixing font size, grid and alignment

--- a/htdocs/index.css
+++ b/htdocs/index.css
@@ -294,6 +294,8 @@ p {
 
 .goals-and-points {
 	list-style: none;
+	font-family: IBM Plex Mono;
+	font-size: 14px;
 }
 
 .goals-and-points li:before {
@@ -305,4 +307,6 @@ p {
 	border-top: 4px solid;
 	border-top-color: #E9FF5C;
 	padding-top: 15px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
